--- a/package.json
+++ b/package.json
@@ -13,15 +13,21 @@
     "@react-navigation/native": "^5.9.3",
     "@react-navigation/stack": "^5.14.3",
     "expo": "~40.0.0",
+    "expo-facebook": "~9.1.0",
+    "expo-google-app-auth": "^8.1.7",
     "expo-status-bar": "~1.0.3",
+    "node-sass": "^6.0.0",
     "react": "16.13.1",
     "react-dom": "16.13.1",
+    "react-hook-form": "^7.5.2",
     "react-native": "https://github.com/expo/react-native/archive/sdk-40.0.1.tar.gz",
     "react-native-gesture-handler": "~1.8.0",
     "react-native-reanimated": "~1.13.0",
     "react-native-safe-area-context": "3.1.9",
+    "react-native-sass-transformer": "^1.4.0",
     "react-native-screens": "~2.15.2",
     "react-native-snap-carousel": "^3.9.1",
+    "react-native-vector-icons": "^8.1.0",
     "react-native-web": "~0.13.12"
   },
   "devDependencies": {
